# eulumdat-core

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: encoding.rs  error.rs  lib.rs  model.rs  parse.rs  photometry.rs  resample.rs  serialize.rs  table_parser.rs  validation.rs
src/generate/: fonts.rs  mod.rs  pdf.rs  png.rs  polar_svg.rs  report_svg.rs
tests/: compat_external_templates.rs  generate_pdf.rs  generate_png.rs  generate_svg.rs  parse_serialize.rs  photometry.rs  resample.rs  table_parser.rs  validation.rs
tests/common/: mod.rs
