[package]
name = "eulumdat-core"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
struct_field_names = "allow"
too_many_lines = "allow"

[dependencies]
