[package]
name = "eulumdat-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pure Rust EULUMDAT .ldt parsing, validation, serialization, and photometry"
repository = "https://github.com/mariusgrote/eulumdat-core"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
struct_field_names = "allow"
too_many_lines = "allow"

[dependencies]
encoding_rs = "0.8"
