[package]
name = "eulumdat-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pure Rust EULUMDAT .ldt parsing, validation, serialization, and photometry"
repository = "https://github.com/mariusgrote/eulumdat-core"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
struct_field_names = "allow"
too_many_lines = "allow"

[features]
default = []
generate-svg = ["dep:svg"]
generate-png = ["generate-svg", "dep:resvg", "dep:usvg", "dep:tiny-skia"]
generate-pdf = ["generate-svg", "dep:svg2pdf"]
generate = ["generate-svg", "generate-png", "generate-pdf"]

[dependencies]
encoding_rs = "0.8"
resvg = { version = "0.47", optional = true }
svg = { version = "0.18", optional = true }
svg2pdf = { version = "0.13", optional = true }
tiny-skia = { version = "0.12", optional = true }
usvg = { version = "0.47", optional = true }
